chore: add ESLint and Prettier configuration for TypeScript
- Added ESLint and Prettier dependencies to package.json
- Configured ESLint with TypeScript support and custom rules
- Added Prettier configuration for code formatting
- Updated backend package.json scripts to include linting and formatting tasks
- Created .eslintignore and .prettierignore files to exclude specific directories

--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -4,7 +4,9 @@
   "main": "dist/app.js",
   "scripts": {
     "dev": "ts-node-dev --respawn app.ts",
-    "build": "tsc",
+    "lint": "eslint . --ext .ts",
+    "format": "prettier --write .",
+    "build": "npm run lint && npm run format && tsc",
     "start": "node dist/app.js"
   },
   "dependencies": {
