--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "devDependencies": {
     "@types/pg": "^8.11.14",
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@typescript-eslint/parser": "^8.31.0",
+    "eslint": "^9.25.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "prettier": "^3.5.3",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
