--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "form-data": "^4.0.2",
+    "music-metadata": "^11.2.1",
     "pg": "^8.15.6"
   }
 }
