--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "eslint": "^9.25.1",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
+    "node-id3": "^0.2.9",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2"
   },
