feat: Initialize Mixtape web application with React and Material-UI
- Add manifest.json for PWA support
- Create robots.txt for SEO
- Implement App.css for styling
- Add App.test.tsx for initial testing
- Develop main App component with track listing and audio playback
- Set up index.css for global styles
- Configure index.tsx for React rendering
- Include logo.svg for branding
- Create main.tsx for application entry point
- Temporarily disable reportWebVitals due to issues
- Implement service worker for offline capabilities
- Register service worker with serviceWorkerRegistration.ts
- Set up testing environment with setupTests.ts
- Add utility for uploading test tracks
- Create web smoke tests for UI validation
- Configure TypeScript with tsconfig.json
- Add scripts to stop frontend and full stack services
- Set up test directory with ESLint and Prettier configurations

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,4 +66,24 @@ jobs:
           ./run-test-server.sh
           sleep 5
           ./test-server.sh
-          ./eng/stop-test-server.sh
+
+      - name: Install frontend dependencies
+        run: |
+          cd src/web
+          npm install --legacy-peer-deps
+
+      - name: Install Playwright browsers
+        run: |
+          cd src/web
+          npx playwright install --with-deps
+
+      - name: Run Playwright web UI tests
+        env:
+          PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
+        run: |
+          cd src/web
+          npx playwright test
+          cd ../..
+
+      - name: Stop backend server
+        run: ./eng/stop-test-server.sh
