chore: add linting and formatting checks to CI workflow and local script; update ESLint and Prettier configurations

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,14 @@ jobs:
         working-directory: src/web
         run: npx playwright install --with-deps
 
+      - name: Lint frontend (treat warnings as errors)
+        working-directory: src/web
+        run: npm run lint -- --max-warnings=0
+
+      - name: Format frontend (check only)
+        working-directory: src/web
+        run: npx prettier --check 'src/**/*.{ts,tsx,css,md}'
+
       - name: Start frontend dev server
         working-directory: src/web
         run: |
