--- a/src/web/package.json
+++ b/src/web/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.17.1",
     "@mui/material": "^5.15.14",
     "@testing-library/react": "^16.3.0",
     "ajv": "^8.12.0",
