--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "form-data": "^4.0.2",
     "multer": "^1.4.5-lts.2",
+    "music-metadata": "^11.2.1",
     "node-id3": "^0.2.9",
     "pg": "^8.15.6"
   },
