--- a/src/web/package.json
+++ b/src/web/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/testing-library__react": "^10.0.1",
+    "node-id3": "^0.2.9",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5"
   },
