feat: re-Implement BottomPlayerBar component with audio playback features with more quality validation
- Added BottomPlayerBar component for audio playback with play/pause functionality.
- Integrated progress slider for seeking within tracks.
- Display current track information including title, artist, and duration.
- Implemented loading state for audio playback.
- Created Header and ThemeSelector components for UI theming.
- Developed TrackList component for displaying and managing tracks.
- Added hooks for managing track state and player functionality.
- Implemented comprehensive testing for BottomPlayerBar including basic, integration, and manual tests.
- Updated API utility to dynamically retrieve API base URL.
- Created a shell script for running player tests with server setup.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,6 +83,10 @@ jobs:
         working-directory: src/web
         run: npx prettier --check 'src/**/*.{ts,tsx,css,md}'
 
+      - name: Run frontend component tests
+        working-directory: src/web
+        run: CI=true npm test -- --watchAll=false --ci --coverage
+
       - name: Start frontend dev server
         working-directory: src/web
         run: |
